# KCD1-ToggleHud

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  buildRelease.ps1  vcpkg.json
.github/workflows/: build.yaml
include/: ConfigHandler.hpp  Hooks.hpp  HudElements.hpp  KeyMap.hpp  State.hpp
package/: ToggleHud.ini
src/: ConfigHandler.cpp  State.cpp  plugin.cpp
